# upschool-future-talent-module-301

./: .gitignore  README.md  UNISHELF_ MVP Kapsam Dokümanı 1.0.md  UNISHELF_ PRD Dokümanı 1.0.md
.cursor/rules/: design-system.mdc  fastapi-rule.mdc
.github/workflows/: ci.yml
app/: index.html  package.json  tsconfig.json
app/src/: main.tsx
app/src/components/: shelf-scene.tsx  shelf-state-view.tsx
app/src/lib/: 3d-shelf-manager.ts  types.ts
app/src/styles/: app.css
backend/: pyproject.toml
backend/app/: main.py  models.py  schemas.py  storage.py
backend/app/routers/: __init__.py  library_routes.py  metadata_routes.py  streak_routes.py  sync_routes.py
backend/app/services/: __init__.py  library_service.py  metadata_pipeline.py  push_service.py  streak_service.py
backend/migrations/: 001_initial_schema.sql
backend/tests/: test_metadata_pipeline.py  test_streak_service.py
backend/unishelf_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infra/: monitoring-metrics.yaml  nfr-targets.md  release-checklist.md
